# EdgeIQ

./: .env.example  Procfile  README.md  pyproject.toml  railway.toml
docs/: architecture.md
src/edgeiq/: backtester.py  config.py  main.py  models.py  odds.py  simulator.py  team_stats.py
tests/: test_backtester.py  test_odds.py  test_simulator.py  test_team_stats.py
