[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "edgeiq"
version = "0.2.0"
description = "EdgeIQ MVP backend for AI-assisted betting analytics"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
